<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="152dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1_review" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1_review" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="238dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:progressBackgroundTint="#FBC02D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv1_review" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="97dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1_review"
        app:srcCompat="@drawable/per3" />

    <TextView
        android:id="@+id/tv1_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/bevan"
        android:text="@string/tv1_review"
        android:textColor="#0626F3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1_review" />

    <TextView
        android:id="@+id/tv4_others_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bevan"
        android:text="@string/tv4_others_rev"
        android:textColor="#0626F4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4_others_rev" />

    <View
        android:id="@+id/divider6"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="97dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:srcCompat="@drawable/per2" />

    <RatingBar
        android:id="@+id/ratingBar4"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:progressBackgroundTint="#AAA69D"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/tv5_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv5_name2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/tv2_name1"
        android:layout_width="43dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv2_name1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tv3_comment1"
        android:layout_width="118dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv3_comment1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv2_name1"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3" />

    <TextView
        android:id="@+id/tv6_comment2"
        android:layout_width="118dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv6_comment2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv5_name2"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar4" />

    <View
        android:id="@+id/divider7"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="128dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="97dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv5_name2"
        app:srcCompat="@drawable/per4" />

    <TextView
        android:id="@+id/tv7_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv7_name3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <RatingBar
        android:id="@+id/ratingBar5"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:progressBackgroundTint="#9F9E9C"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/divider6" />

    <TextView
        android:id="@+id/tv8_comment3"
        android:layout_width="118dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv8_comment3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv7_name3"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar5" />

    <View
        android:id="@+id/divider8"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="@+id/divider7"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="97dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/per3"
        tools:layout_editor_absoluteY="567dp" />

    <TextView
        android:id="@+id/tv9_name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv9_name4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <RatingBar
        android:id="@+id/ratingBar6"
        android:layout_width="231dp"
        android:layout_height="62dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:progressBackgroundTint="#939291"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/divider7" />

    <TextView
        android:id="@+id/tv10_comment4"
        android:layout_width="118dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/tv10_comment4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv9_name4"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar6" />

</androidx.constraintlayout.widget.ConstraintLayout>